# ui-ux-pro-max-skill

./: .env.example  Agent修复总结.md  Dify服务器部署指南.md  Dify集成总结.md  Dify集成指南.md  LangChain集成指南.md  Poetry环境配置指南.md  README.md  Single File HTML技术栈说明.md  agent.py  demo-serenity-spa.html  pyproject.toml  test_setup.py  安装指南.md  数据文件参数说明文档.md  软件设计架构文档.md
api-service/: Dify API服务使用指南.md  api-provider.yaml  api_service.py
dify-integration/: Dify代码执行节点使用指南.md  code-execution-tools.yaml  code-execution.yaml  deploy-to-dify.sh  provider.yaml  tools.yaml  ui_ux_pro_max.py  快速参考.md  目录结构.md
langchain-example/: README.md  pyproject.toml
langchain-example/examples/: basic_agent.py
src/ui-ux-pro-max/data/stacks/: single-file-html.csv
